# mapping-commons.github.io

./: .gitignore  Makefile  README.md  index.html  justfile  mapping-server.yml  mappings.yml  package-lock.json  pyproject.toml  registry.yml  requirements.txt
.github/workflows/: build.yml  deploy-docs.yml  deploy.yml  node.js.yml
css/: app.css  chunk-vendors.72a15a34.css  chunk-vendors.ff603852.css  style.css
data/: mapping-data.json  mapping-specifications.json
docs/: original_license_applies.md
js/: app.31d39cf7.js  app.31d39cf7.js.map  app.5da4fec8.js  app.5da4fec8.js.map  app.606dea44.js  app.606dea44.js.map  app.66056a8b.js  app.66056a8b.js.map  app.7c4bc1f1.js  app.7c4bc1f1.js.map  app.7db67bfb.js  app.7db67bfb.js.map  app.js  chunk-vendors.2aaa3490.js  chunk-vendors.2aaa3490.js.map  chunk-vendors.69b84130.js  chunk-vendors.69b84130.js.map  chunk-vendors.92ae0fb3.js  chunk-vendors.92ae0fb3.js.map  chunk-vendors.js
mappings/: empty.sssom.tsv  linkmlmap-to-fair.sssom.tsv  sssom-to-fair.sssom.tsv
scripts/: cli.py  read_mapping_registry_metadata.py
site/css/: style.css
site/js/: app.js
table/: README.md  package-lock.json
table-component/: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json
table-component/public/: index.html
table-component/src/: App.vue  main.js
table/src/: App.vue  main.js
transforms/: linkmlmap-to-fair.transformation.yaml  sssom-to-fair.transformation.yaml
