[project]
name = "mapping-commons-registry"
version = "0.1.0"
description = "Mapping Commons Registry - search and browse FAIR mapping specifications"
requires-python = ">=3.10"
dependencies = [
    "linkml-map @ git+https://github.com/linkml/linkml-map.git@issue170",
    "fair-mappings @ file:///Users/matentzn/ws/fair-mappings-schema",
    "sssom",
    "click",
    "pyyaml",
    "requests",
]

[tool.uv]
override-dependencies = [
    "linkml-map @ git+https://github.com/linkml/linkml-map.git@issue170",
]
